--- a/storer/secret.py.example
+++ b/storer/secret.py.example
@@ -1,1 +1,16 @@
+'''
+type the below:
+```echo 'grant_type=password&username=<your_username>&password=<your_password>' > auth.txt
+curl --data "@auth.txt" --request POST https://gitlab.example.com/oauth/token```
+to get:
+```{
+  "access_token": "<ACCESS_KEY>",
+  "token_type": "bearer",
+  "expires_in": 7200
+}```
+
+https://gitlab.com/api/v4/projects/<:id>/repository/files/<filename-with-extension>
+<:id> is project id, which can be found in the settings of your gitlab repo
+'''
 access_key="Bearer <ACCESS_KEY>"
+project_id="<:id>"
