--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,4 @@ storer/upload/*
 storer/secret.py
 
 # pyc files
-storer/__pycache__/*
-storer/migrations/__pycache__/*
-storer/templatetags/__pycache/*
+__pycache__/
